--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,37 @@
 body {
-  text-align: center;
-  background-color: #5E5F60;
+  display: flex;
+  justify-content: center;
+}
+
+.panel {
+  width: 180px;
+  height: 606px;
+  padding-top: 35px;
+}
+
+.btn-start {
+  border-radius: 5px;
+  padding: 15px 25px;
+  font-size: 22px;
+  text-decoration: none;
+  margin: 20px;
+  color: #fff;
+  position: relative;
+  display: inline-block;
+  background-color: #55acee;
+  box-shadow: 0px 5px 0px 0px #3C93D5;
+}
+
+.btn-start:active {
+  transform: translate(0px, 5px);
+  -webkit-transform: translate(0px, 5px);
+  box-shadow: 0px 1px 0px 0px;
+}
+
+.btn-start:hover {
+  background-color: #6FC6FF;
+}
+
+.btn-start.disabled {
+  background-color: #6FC6FF;
 }
