feature: 游戏结束弹窗

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ canvas {
   display: inline-block;
 }
 
-.ui.grid.panel .char.value img {
+.ui.grid.panel .char.value img,
+.ui.char-change.modal img {
   width: 100px;
   height: 100px;
   object-fit: cover;
